apps/kyverno/policies/disallow-privileged.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy

metadata:
  name: disallow-privileged

  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod

spec:
  validationActions:
    - Audit

  evaluation:
    background:
      enabled: true

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - expression: >-
        variables.allContainers.all(
          container,
          container.?securityContext.?privileged.orValue(false) == false
        )
      message: >-
        Privileged containers are not allowed.
