apps/kyverno/policies/require-run-as-nonroot.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy

metadata:
  name: require-run-as-nonroot
  annotations:
    policies.kyverno.io/title: Require Running as Non-root
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod

spec:
  validationActions:
    - Audit

  evaluation:
    background:
      enabled: true

  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system

    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - expression: >-
        object.spec.?securityContext.?runAsNonRoot.orValue(false) ||
        variables.allContainers.all(
          container,
          container.?securityContext.?runAsNonRoot.orValue(false)
        )
      message: >-
        Pods or all containers should explicitly set runAsNonRoot to true.
